# ChangeLog for app-emulation/xtrs
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Apr 2014; Ulrich Müller <ulm@gentoo.org> xtrs-4.9d-r51.ebuild:
  Fix dependency on xdelta:3. Don't try in-place binary patching.

*xtrs-4.9d-r51 (12 Apr 2014)

  12 Apr 2014; Ulrich Müller <ulm@gentoo.org> xtrs-4.9d-r50.ebuild,
  +xtrs-4.9d-r51.ebuild:
  Add missing dependency on app-arch/unzip. Fix LS-DOS date bug.

  12 Apr 2014; Ulrich Müller <ulm@gentoo.org> xtrs-4.9d-r50.ebuild,
  metadata.xml:
  Rename ldos USE flag to ls-dos.

*xtrs-4.9d-r50 (31 Jan 2014)

  31 Jan 2014; Ulrich Müller <ulm@gentoo.org> +xtrs-4.9d-r50.ebuild,
  +files/xtrs-4.9d-ulm.patch, +metadata.xml:
  Copied from Portage tree. Apply patch with some features for my own use.
