@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/xtrs
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  07 Mar 2015; Ulrich Müller <ulm@gentoo.org> -xtrs-4.9d-r50.ebuild,
+  xtrs-4.9d-r51.ebuild:
+  Merge changes from Portage tree. Remove old.
 
   13 Apr 2014; Ulrich Müller <ulm@gentoo.org> xtrs-4.9d-r51.ebuild:
   Fix dependency on xdelta:3. Don't try in-place binary patching.
